// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PastGamesPage component to render listing of previous games 1`] = `
<DocumentFragment>
  <div
    class=""
    id="games-page"
  >
    <div
      class="action-panel"
    >
      <button
        class="btn btn-primary"
      >
        Reload
      </button>
      <button
        class="btn btn-primary ml-2"
      >
        Import Game
      </button>
    </div>
    <div
      class="past-games-buttons"
    >
      <div
        class="row mb-4 page-all"
      >
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle popularity-button"
            href="/history"
          >
            <h4>
              Theme Popularity
            </h4>
          </a>
        </div>
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle usage-button"
            href="/history/themes"
          >
            <h4>
              Theme Last Usage
            </h4>
          </a>
        </div>
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle calendar-button"
            href="/history/calendar"
          >
            <h4>
              Games Calendar
            </h4>
          </a>
        </div>
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle all-button"
            href="/history/games"
          >
            <h4>
              All Games
            </h4>
          </a>
        </div>
      </div>
    </div>
    <table
      class="table table-bordered game-list"
    >
      <thead>
        <tr>
          <th
            class="available-games"
            colspan="5"
          >
            Previous Bingo games
            <button
              aria-label="Reload"
              class="btn btn-light refresh-icon btn-sm"
            >
              ↻
            </button>
          </th>
        </tr>
        <tr>
          <th
            class="round-column"
          >
            Round
          </th>
          <th
            class="date-column"
          >
            Date and Time
          </th>
          <th
            class="game-id-column"
          >
            Game ID
          </th>
          <th
            class="theme-column"
          >
            Theme
          </th>
          <th
            class="ticket-column"
          >
            Track listing
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            colspan="5"
          >
            Thu Apr 05 2018
          </th>
        </tr>
        <tr
          class="round-1 green-theme"
          data-testid="pastgame[2]"
        >
          <td
            class="round-column"
          >
            1
          </td>
          <td
            class="date-column"
          >
            8:43:00 pm 05/04/2018
          </td>
          <td
            class="game-id-column"
          >
            <a
              href="/history/games/18-04-25-2"
            >
              18-04-25-2
            </a>
          </td>
          <td
            class="theme-column"
          >
            <a
              href="/history/themes/pot-luck"
            >
              Pot Luck
            </a>
          </td>
          <td
            class="ticket-column"
          >
            <a
              href="/history/games/18-04-25-2"
            >
              View track listing
            </a>
          </td>
        </tr>
        <tr>
          <th
            colspan="5"
          >
            Fri Apr 06 2018
          </th>
        </tr>
        <tr
          class="round-1 blue-theme"
          data-testid="pastgame[1]"
        >
          <td
            class="round-column"
          >
            1
          </td>
          <td
            class="date-column"
          >
            7:24:25 pm 06/04/2018
          </td>
          <td
            class="game-id-column"
          >
            <a
              href="/history/games/18-04-25-1"
            >
              18-04-25-1
            </a>
          </td>
          <td
            class="theme-column"
          >
            <a
              href="/history/themes/rock"
            >
              Rock
            </a>
          </td>
          <td
            class="ticket-column"
          >
            <a
              href="/history/games/18-04-25-1"
            >
              View track listing
            </a>
          </td>
        </tr>
        <tr>
          <th
            colspan="5"
          >
            Sun Apr 22 2018
          </th>
        </tr>
        <tr
          class="round-1 blue-theme"
          data-testid="pastgame[159]"
        >
          <td
            class="round-column"
          >
            1
          </td>
          <td
            class="date-column"
          >
            3:43:56 pm 22/04/2018
          </td>
          <td
            class="game-id-column"
          >
            <a
              href="/history/games/18-04-22-2"
            >
              18-04-22-2
            </a>
          </td>
          <td
            class="theme-column"
          >
            <a
              href="/history/themes/various-artists"
            >
              Various Artists
            </a>
          </td>
          <td
            class="ticket-column"
          >
            <a
              href="/history/games/18-04-22-2"
            >
              View track listing
            </a>
          </td>
        </tr>
        <tr>
          <th
            colspan="5"
          >
            Thu May 03 2018
          </th>
        </tr>
        <tr
          class="round-1 blue-theme"
          data-testid="pastgame[3]"
        >
          <td
            class="round-column"
          >
            1
          </td>
          <td
            class="date-column"
          >
            7:51:00 pm 03/05/2018
          </td>
          <td
            class="game-id-column"
          >
            <a
              href="/history/games/18-05-02-1"
            >
              18-05-02-1
            </a>
          </td>
          <td
            class="theme-column"
          >
            <a
              href="/history/themes/rock-power-ballads"
            >
              Rock & Power Ballads
            </a>
          </td>
          <td
            class="ticket-column"
          >
            <a
              href="/history/games/18-05-02-1"
            >
              View track listing
            </a>
          </td>
        </tr>
        <tr
          class="round-2 green-theme"
          data-testid="pastgame[4]"
        >
          <td
            class="round-column"
          >
            2
          </td>
          <td
            class="date-column"
          >
            8:58:47 pm 03/05/2018
          </td>
          <td
            class="game-id-column"
          >
            <a
              href="/history/games/18-05-02-2"
            >
              18-05-02-2
            </a>
          </td>
          <td
            class="theme-column"
          >
            <a
              href="/history/themes/motown"
            >
              Motown
            </a>
          </td>
          <td
            class="ticket-column"
          >
            <a
              href="/history/games/18-05-02-2"
            >
              View track listing
            </a>
          </td>
        </tr>
        <tr>
          <th
            colspan="5"
          >
            Mon Jun 01 2020
          </th>
        </tr>
        <tr
          class="round-1 yellow-theme"
          data-testid="pastgame[84]"
        >
          <td
            class="round-column"
          >
            1
          </td>
          <td
            class="date-column"
          >
            7:00:00 pm 01/06/2020
          </td>
          <td
            class="game-id-column"
          >
            <a
              href="/history/games/20-06-01-2"
            >
              20-06-01-2
            </a>
          </td>
          <td
            class="theme-column"
          >
            <a
              href="/history/themes/rock"
            >
              Rock
            </a>
          </td>
          <td
            class="ticket-column"
          >
            <a
              href="/history/games/20-06-01-2"
            >
              View track listing
            </a>
          </td>
        </tr>
        <tr>
          <th
            colspan="5"
          >
            Thu Jun 04 2020
          </th>
        </tr>
        <tr
          class="round-1 yellow-theme"
          data-testid="pastgame[85]"
        >
          <td
            class="round-column"
          >
            1
          </td>
          <td
            class="date-column"
          >
            7:30:00 pm 04/06/2020
          </td>
          <td
            class="game-id-column"
          >
            <a
              href="/history/games/20-06-03-1"
            >
              20-06-03-1
            </a>
          </td>
          <td
            class="theme-column"
          >
            <a
              href="/history/themes/sunshine"
            >
              sunshine
            </a>
          </td>
          <td
            class="ticket-column"
          >
            <a
              href="/history/games/20-06-03-1"
            >
              View track listing
            </a>
          </td>
        </tr>
        <tr
          class="round-2 pride-theme"
          data-testid="pastgame[86]"
        >
          <td
            class="round-column"
          >
            2
          </td>
          <td
            class="date-column"
          >
            8:01:00 pm 04/06/2020
          </td>
          <td
            class="game-id-column"
          >
            <a
              href="/history/games/20-06-03-2"
            >
              20-06-03-2
            </a>
          </td>
          <td
            class="theme-column"
          >
            <a
              href="/history/themes/pride"
            >
              Pride
            </a>
          </td>
          <td
            class="ticket-column"
          >
            <a
              href="/history/games/20-06-03-2"
            >
              View track listing
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`PastGamesPage component to render listing of previous games of a specific theme 1`] = `
<DocumentFragment>
  <div
    class=""
    id="games-page"
  >
    <div
      class="action-panel"
    >
      <button
        class="btn btn-primary"
      >
        Reload
      </button>
      <button
        class="btn btn-primary ml-2"
      >
        Import Game
      </button>
    </div>
    <div
      class="past-games-buttons"
    >
      <div
        class="row mb-4 page-all"
      >
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle popularity-button"
            href="/history"
          >
            <h4>
              Theme Popularity
            </h4>
          </a>
        </div>
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle usage-button"
            href="/history/themes"
          >
            <h4>
              Theme Last Usage
            </h4>
          </a>
        </div>
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle calendar-button"
            href="/history/calendar"
          >
            <h4>
              Games Calendar
            </h4>
          </a>
        </div>
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle all-button"
            href="/history/games"
          >
            <h4>
              All Games
            </h4>
          </a>
        </div>
      </div>
    </div>
    <table
      class="table table-bordered game-list"
    >
      <thead>
        <tr>
          <th
            class="available-games"
            colspan="5"
          >
            Previous "Rock" Bingo games
            <button
              aria-label="Reload"
              class="btn btn-light refresh-icon btn-sm"
            >
              ↻
            </button>
          </th>
        </tr>
        <tr>
          <th
            class="round-column"
          >
            Round
          </th>
          <th
            class="date-column"
          >
            Date and Time
          </th>
          <th
            class="game-id-column"
          >
            Game ID
          </th>
          <th
            class="theme-column"
          >
            Theme
          </th>
          <th
            class="ticket-column"
          >
            Track listing
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            colspan="5"
          >
            Fri Apr 06 2018
          </th>
        </tr>
        <tr
          class="round-1 blue-theme"
          data-testid="pastgame[1]"
        >
          <td
            class="round-column"
          >
            1
          </td>
          <td
            class="date-column"
          >
            7:24:25 pm 06/04/2018
          </td>
          <td
            class="game-id-column"
          >
            <a
              href="/history/themes/rock/18-04-25-1"
            >
              18-04-25-1
            </a>
          </td>
          <td
            class="theme-column"
          >
            <a
              href="/history/themes/rock"
            >
              Rock
            </a>
          </td>
          <td
            class="ticket-column"
          >
            <a
              href="/history/themes/rock/18-04-25-1"
            >
              View track listing
            </a>
          </td>
        </tr>
        <tr>
          <th
            colspan="5"
          >
            Mon Jun 01 2020
          </th>
        </tr>
        <tr
          class="round-1 yellow-theme"
          data-testid="pastgame[84]"
        >
          <td
            class="round-column"
          >
            1
          </td>
          <td
            class="date-column"
          >
            7:00:00 pm 01/06/2020
          </td>
          <td
            class="game-id-column"
          >
            <a
              href="/history/themes/rock/20-06-01-2"
            >
              20-06-01-2
            </a>
          </td>
          <td
            class="theme-column"
          >
            <a
              href="/history/themes/rock"
            >
              Rock
            </a>
          </td>
          <td
            class="ticket-column"
          >
            <a
              href="/history/themes/rock/20-06-01-2"
            >
              View track listing
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
